2017-06-07  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/planner.c: Fix planner looping

2017-06-06  Jean-Louis Martineau <JMartineau@carbonite.com>
	* NEWS, ReleaseNotes: 3.4.5

2017-06-06  Jean-Louis Martineau <JMartineau@carbonite.com>
	* config/amanda/amanda_configure.m4: Call AMANDA_CHECK_LIBDL
	* config/amanda/libs.m4 (AMANDA_CHECK_LIBDL): Check if libdl exists
	* device-src/Makefile.am: Use $LIBDL}

2017-06-06  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/conffile.c (read_block): Reset current_line_num after
	  processing config_overrides

2017-06-05  Jean-Louis Martineau <JMartineau@carbonite.com>
	* recover-src/extract_list.c: Fix memory leak

2017-06-05  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/xfer-dest-taper-splitter.c: Fix taper hang

2017-05-19  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Vault.pm: Set $size to -1 if it is 0. 0 means nothing,
	  -1, means everything

2017-05-18  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/s3-device.c:use_s3_multi_delete default to 1 for SWIFT-3
	* device-src/s3.c (s3_multi_delete): Handle S3_API_SWIFT_3

2017-05-16  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Chunker/Controller.pm: Send SHM_NAME or PORT only if we
	  have a header_port
	* perl/Amanda/Report.pm: Chunker without dumper is a failure
	* perl/Amanda/Report/human.pm: Chunker without dumper is a FAILED
	* server-src/driver.c: Call dumper_chunker_result if chunker failand
	  dumper not yet started
	* server-src/driverio.h (struct dumper_s): Add sent_command
	* xfer-src/element-glue.c (do_directtcp_listen): Correctly print error
	  from resolve_hostname()

2017-05-15  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/amjson.c (amjson_s, parse_json_primitive,
	  json_parse_string): Move declaration to amjson.h
	* common-src/amjson.h: Add declaration
	* common-src/ammessage.c: Use amjson type and functions
