@@ -226,6 +226,8 @@ if ($Amanda::Constants::SINGLE_USERID) {
 	or diag("XX:". Data::Dumper::Dumper(\@{$selfcheck->{'errors'}}));
 } else {
     ok($selfcheck->{'errors'}[0]->{code} eq '3600096' &&
+       $selfcheck->{'errors'}[0]->{security_file} eq $Amanda::Paths::SECURITY_FILE &&
+       $selfcheck->{'errors'}[0]->{prefix} eq "amstar:star_path" &&
        $selfcheck->{'errors'}[0]->{path} eq "$bad_star", "good error selfcheck ")
 	or diag("XX:". Data::Dumper::Dumper(\@{$selfcheck->{'errors'}}));
 }
